# cpad-lab

./: .gitignore
atom-text-flip/: package.json
atom-text-flip/keymaps/: text-flip-keymap.json
atom-text-flip/lib/: text-flip.js
atom-text-flip/menus/: text-flip.json
complex_num/: CMakeLists.txt  Makefile
complex_num/_build/: build.sh
complex_num/complex_lib/: CMakeLists.txt  Makefile  complex_num.cpp  complex_num.h
complex_num/complex_poly_exe/: CMakeLists.txt  Makefile  main.cpp
electron-csv/: index.html  index.js  package.json  renderer.js  style.css
qml_phone_book/: CMakeLists.txt  phone_book.cpp  phone_book.qrc  phonemodel.cpp  phonemodel.h
qml_phone_book/resources/: Main.qml  phonebook.json  phonemodel.cpp  phonemodel.h
qt_plot/: CMakeLists.txt  context.h  function_to_plot.h  main.cpp  set_range_dialog.cpp  set_range_dialog.h  win_main.cpp  win_main.h
qt_plot/ui/: main_window.ui  set_range_dialog.ui
qt_twitter_search/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
table_editor/: CMakeLists.txt  combo-delegate.cpp  combo-delegate.h  data.cpp  data.h  main.cpp  tablemodel.cpp  tablemodel.h
table_editor/csv_examples/: example1.csv  example2.csv
table_editor/data/: foo.csv
table_editor/translations/: lang_en_US.ts  lang_ru_RU.ts
table_editor/ui/: mainwindow.ui  tablewindow.ui
table_editor/win/: main_window.cpp  main_window.h  table_window.cpp  table_window.h
tictactoe/: CMakeLists.txt  clientgame.cpp  clientgame.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netsession.cpp  netsession.h  servergame.cpp  servergame.h  tictactoe.h
